Add card section and image

--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio 2.0</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+      />
+  </head>
+  <body>
     <section class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-teal localStyle">
-            <div class="container-fluid">
-              <!-- <a class="navbar-brand" href="#">Navbar</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-teal localStyle">
+        <div class="container-fluid">
+          <!-- <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button> -->
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                  <!-- <li class="nav-item dropdown">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Dropdown
                     </a>
@@ -35,26 +39,241 @@
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li> -->
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</a>
-                  </li>
-                </ul>
-                <!-- <form class="d-flex">
+              <li class="nav-item">
+                <a
+                  class="nav-link disabled"
+                  href="#"
+                  tabindex="-1"
+                  aria-disabled="true">Contact</a>
+              </li>
+            </ul>
+            <!-- <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form> -->
+          </div>
+        </div>
+      </nav>
+    </section>
+    <h1>Anibal & Alejandro Portfolio</h1>
+    <p>
+      We can help you build a product , feature or website Look through some of
+      my work and experience! If you like what you see and have a project you
+      need coded, don’t hestiate to contact us.
+    </p>
+    <section>
+      <h2>Our Recent Projects</h2>
+<div class="container">
+  <div class="row">
+      <div class="card col" style="width: 18rem">
+        <img
+          src="images/port-3.png"
+          class="card-img-top rounded-circle"
+          alt="thumbnail-project1"
+          />
+        <div class="card-body">
+          <p class="card-text">Multi-Post-Stories</p>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav cards-menu">
+                  <li class="nav-item">
+                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Css</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="#">Html</a>
+                  </li>
+                </ul>
               </div>
             </div>
           </nav>
+          <button type="button" class="btn btn-success text-dark">See Project</button>
+        </div>
+      </div>
+    
+      <div class="card col" style="width: 18rem">
+        <img
+          src="images/port-3.png"
+          class="card-img-top rounded-circle"
+          alt="thumbnail-project1"
+          />
+        <div class="card-body">
+          <p class="card-text">Multi-Post-Stories</p>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav cards-menu">
+                  <li class="nav-item">
+                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Css</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="#">Html</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <button type="button" class="btn btn-success text-dark">See Project</button>
+        </div>
+      </div>
+      <div class="card col" style="width: 18rem">
+        <img
+          src="images/port-3.png"
+          class="card-img-top rounded-circle"
+          alt="thumbnail-project1"
+          />
+        <div class="card-body">
+          <p class="card-text">Multi-Post-Stories</p>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav cards-menu">
+                  <li class="nav-item">
+                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Css</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="#">Html</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <button type="button" class="btn btn-success text-dark">See Project</button>
+        </div>
+      </div>
+      <div class="row">
+    </div>
+      <div class="card col" style="width: 18rem">
+        <img
+          src="images/port-3.png"
+          class="card-img-top rounded-circle"
+          alt="thumbnail-project1"
+          />
+        <div class="card-body">
+          <p class="card-text">Multi-Post-Stories</p>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav cards-menu">
+                  <li class="nav-item">
+                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Css</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="#">Html</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <button type="button" class="btn btn-success text-dark">See Project</button>
+        </div>
+      </div>
+      <div class="card col" style="width: 18rem">
+        <img
+          src="images/port-3.png"
+          class="card-img-top rounded-circle"
+          alt="thumbnail-project1"
+          />
+        <div class="card-body">
+          <p class="card-text">Multi-Post-Stories</p>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav cards-menu">
+                  <li class="nav-item">
+                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Css</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="#">Html</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <button type="button" class="btn btn-success text-dark">See Project</button>
+        </div>
+      </div>
+      <div class="card col" style="width: 18rem">
+        <img
+          src="images/port-3.png"
+          class="card-img-top rounded-circle"
+          alt="thumbnail-project1"
+          />
+        <div class="card-body">
+          <p class="card-text">Multi-Post-Stories</p>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav cards-menu">
+                  <li class="nav-item">
+                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Css</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Javascript</a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="#">Html</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <button type="button" class="btn btn-success text-dark">See Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
     </section>
-    <h1>Anibal & Alejandro Portfolio</h1>
-    <p> We can help you build a product , feature or website Look through some of my work and experience!
-        If you like what you see and have a project you need coded, 
-        don’t hestiate to contact us.</p>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
