Add Badges in aboutMe section in index.html

--- a/index.html
+++ b/index.html
@@ -63,14 +63,13 @@
     </p>
     <section>
       <h2>Our Recent Projects</h2>
-<div class="container">
-  <div class="row">
-      <div class="card col" style="width: 18rem">
-        <img
-          src="images/port-3.png"
-          class="card-img-top rounded-circle"
-          alt="thumbnail-project1"
-          />
+      <div class="container">
+        <div class="row">
+            <div class="card col" style="width: 18rem">
+                <img
+                src="images/port-3.png"
+                class="card-img-top rounded-circle"
+                alt="thumbnail-project1"/>
         <div class="card-body">
           <p class="card-text">Multi-Post-Stories</p>
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -268,6 +267,52 @@
       </div>
     </div>
   </div>
+    </section>
+    <section class="aboutMe mt-5 mb-5">
+        <h2>About us</h2>
+        <p> We can help you build a product , feature or website Look through some of our work and experience! 
+            If you like what you see and have a project you need coded, 
+            don’t hestiate to contact us.</p>
+        <div class="container">
+            <div class="row">
+                <div class="card-group col">
+                    <div class="card">
+                      <img src="images/Icons2.png" class="card-img-top" alt="World Icon">
+                      <div class="card-body align-content-center">
+                        <h5 class="card-title">Languages</h5>
+                        <span class="badge bg-light text-success">Javascript</span>
+                        <span class="badge bg-light text-success">Ruby</span>
+                        <span class="badge bg-light text-success">HTML</span>
+                        <span class="badge bg-light text-success">CSS</span>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="images/Icons.png" class="card-img-top" alt="square Icon">
+                      <div class="card-body">
+                        <h5 class="card-title">Frameworks</h5>
+                        <span class="badge bg-light text-success">bootstrap</span>
+                        <span class="badge bg-light text-success">Ruby on Rails</span>
+                        <span class="badge bg-light text-success">RSpec</span>
+                        <span class="badge bg-light text-success">Capybara</span>
+                        <span class="badge bg-light text-success">Selenium</span>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="images/Icons3.png" class="card-img-top" alt="ligtheen Icon">
+                      <div class="card-body">
+                        <h5 class="card-title">Skills</h5>
+                        <span class="badge bg-light text-success">Codekit</span>
+                        <span class="badge bg-light text-success">Github</span>
+                        <span class="badge bg-light text-success">Codepen</span>
+                        <span class="badge bg-light text-success">Gitlab</span>
+                        <span class="badge bg-light text-success">Terminal</span>
+                      </div>
+                    </div>
+                  </div>
+
+            </div>
+
+        </div>
 
     </section>
 
