Add bootstrap classes to index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </p>
   </section>
     <section>
-      <h2>Our Recent Projects</h2>
+      <h2 class="subTitle">Our Recent Projects</h2>
       <div class="container">
         <div class="row">
             <div class="card col" style="width: 18rem">
@@ -80,7 +80,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav cards-menu">
                   <li class="nav-item">
-                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                    <a class="nav-link" aria-current="page" href="#">Ruby on Rails</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Css</a>
@@ -97,7 +97,7 @@
               </div>
             </div>
           </nav>
-          <button type="button" class="btn btn-success text-dark">See Project</button>
+          <button type="button" class="btn btn-success text-light mt-2 ms-5">See Project</button>
         </div>
       </div>
     
@@ -114,7 +114,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav cards-menu">
                   <li class="nav-item">
-                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                    <a class="nav-link" aria-current="page" href="#">Ruby on Rails</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Css</a>
@@ -131,7 +131,7 @@
               </div>
             </div>
           </nav>
-          <button type="button" class="btn btn-success text-dark">See Project</button>
+          <button type="button" class="btn btn-success text-light mt-2 ms-5">See Project</button>
         </div>
       </div>
       <div class="card col" style="width: 18rem">
@@ -147,7 +147,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav cards-menu">
                   <li class="nav-item">
-                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                    <a class="nav-link" aria-current="page" href="#">Ruby on Rails</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Css</a>
@@ -164,7 +164,7 @@
               </div>
             </div>
           </nav>
-          <button type="button" class="btn btn-success text-dark">See Project</button>
+          <button type="button" class="btn btn-success text-light mt-2 ms-5">See Project</button>
         </div>
       </div>
       <div class="row">
@@ -182,7 +182,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav cards-menu">
                   <li class="nav-item">
-                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                    <a class="nav-link" aria-current="page" href="#">Ruby on Rails</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Css</a>
@@ -199,7 +199,7 @@
               </div>
             </div>
           </nav>
-          <button type="button" class="btn btn-success text-dark">See Project</button>
+          <button type="button" class="btn btn-success text-light mt-2 ms-5">See Project</button>
         </div>
       </div>
       <div class="card col" style="width: 18rem">
@@ -215,7 +215,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav cards-menu">
                   <li class="nav-item">
-                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                    <a class="nav-link" aria-current="page" href="#">Ruby on Rails</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Css</a>
@@ -232,7 +232,7 @@
               </div>
             </div>
           </nav>
-          <button type="button" class="btn btn-success text-dark">See Project</button>
+          <button type="button" class="btn btn-success text-light mt-2 ms-5">See Project</button>
         </div>
       </div>
       <div class="card col" style="width: 18rem">
@@ -248,7 +248,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav cards-menu">
                   <li class="nav-item">
-                    <a class="active" aria-current="page" href="#">Ruby on Rails</a>
+                    <a class="nav-link" aria-current="page" href="#">Ruby on Rails</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Css</a>
@@ -265,13 +265,13 @@
               </div>
             </div>
           </nav>
-          <button type="button" class="btn btn-success text-dark">See Project</button>
+          <button type="button" class="btn btn-success text-light mt-2 ms-5">See Project</button>
         </div>
       </div>
     </div>
   </div>
     </section>
-    <section class="aboutMe mt-5 mb-5">
+    <section class="aboutMe mt-5 mb-5 d-flex">
         <h2>About us</h2>
         <p> We can help you build a product , feature or website Look through some of our work and experience! 
             If you like what you see and have a project you need coded, 
