--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h2 class="subTitle" id="recentProjects">Our Recent Projects</h2>
       <div class="container">
         <div class="row">
-          <div class="card col" style="width: 18rem">
+          <div class="card col">
             <img
               src="images/port-3.png"
               class="card-img-top rounded-circle"
@@ -114,7 +114,7 @@
             </div>
           </div>
 
-          <div class="card col" style="width: 18rem">
+          <div class="card col">
             <img
               src="images/port-3.png"
               class="card-img-top rounded-circle"
@@ -124,7 +124,7 @@
               <p class="card-text">Multi-Post-Stories</p>
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse">
                     <ul class="navbar-nav cards-menu">
                       <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#"
@@ -154,7 +154,7 @@
               </button>
             </div>
           </div>
-          <div class="card col" style="width: 18rem">
+          <div class="card col">
             <img
               src="images/port-3.png"
               class="card-img-top rounded-circle"
@@ -195,7 +195,7 @@
             </div>
           </div>
           <div class="row"></div>
-          <div class="card col" style="width: 18rem">
+          <div class="card col">
             <img
               src="images/port-3.png"
               class="card-img-top rounded-circle"
@@ -275,7 +275,7 @@
               </button>
             </div>
           </div>
-          <div class="card col" style="width: 18rem">
+          <div class="card col">
             <img
               src="images/port-3.png"
               class="card-img-top rounded-circle"
