--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <p class="card-text">Multi-Post-Stories</p>
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse">
                     <ul class="navbar-nav cards-menu">
                       <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#"
@@ -235,7 +235,7 @@
               </button>
             </div>
           </div>
-          <div class="card col" style="width: 18rem">
+          <div class="card col">
             <img
               src="images/port-3.png"
               class="card-img-top rounded-circle"
