--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <p class="card-text">Multi-Post-Stories</p>
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse">
                     <ul class="navbar-nav cards-menu">
                       <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#"
