Final linter fixing

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                   class="nav-link active text-success"
                   href="#stayInContact"
                   tabindex="-1"
-                  aria-disabled="true"
                   >Contact</a
                 >
               </li>
@@ -245,7 +244,7 @@
               <p class="card-text">Multi-Post-Stories</p>
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse">
                     <ul class="navbar-nav cards-menu">
                       <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#"
@@ -285,7 +284,7 @@
               <p class="card-text">Multi-Post-Stories</p>
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse">
                     <ul class="navbar-nav cards-menu">
                       <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#"
